force-app/main/default/objects/Queue__c/Queue__c.object-meta.xml
<CustomObject>
    <label>Coda</label>
    <nameField>
        <label>Coda Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>