force-app/main/default/objects/Queue__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>Agenzia assegnata alla coda</description>
    <label>@deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>