force-app/main/default/objects/Queue__c/fields/DailyCapacity__c.field-meta.xml
<CustomField>
    <fullName>DailyCapacity__c</fullName>
    <label>Capacità Massima Giornaliera</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>