force-app/main/default/objects/Queue__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Gruppo di Lavoro old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>