force-app/main/default/objects/Queue__c/fields/QueueId__c.field-meta.xml
<CustomField>
    <fullName>QueueId__c</fullName>
    <description>ID della coda</description>
    <label>ID Coda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>