force-app/main/default/objects/Queue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo della coda, PULL o PUSH</description>
    <label>Tipologia Coda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PUSH</fullName>
            </value>
            <value>
                <fullName>PULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>