force-app/main/default/objects/Queue__c/fields/WorkGroup__c.field-meta.xml
<CustomField>
    <fullName>WorkGroup__c</fullName>
    <label>Gruppo di Lavoro</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CDO_PPT_DISCO</fullName>
            </value>
            <value>
                <fullName>HC_CDO_OM</fullName>
            </value>
            <value>
                <fullName>HC_CDO_OM_Attivazioni_HC</fullName>
            </value>
            <value>
                <fullName>HC_CDO_OM_Attivazioni_Service A</fullName>
            </value>
            <value>
                <fullName>HC_CDO_OM_Attivazioni_Service B</fullName>
            </value>
            <value>
                <fullName>HC_CDO_OM_OUT</fullName>
            </value>
            <value>
                <fullName>HC_CRM_CC_CMD</fullName>
            </value>
            <value>
                <fullName>HC_CRM_CC_CV_qualità</fullName>
            </value>
            <value>
                <fullName>HC_CRM_CC_CV_TL</fullName>
            </value>
            <value>
                <fullName>HC_CRM_CC_KNVK_TL</fullName>
            </value>
            <value>
                <fullName>HC_CRM_CC_LT_TL</fullName>
            </value>
            <value>
                <fullName>HC_CRM_Escalation_CC_CV_qualità</fullName>
            </value>
            <value>
                <fullName>HC_CRM_Escalation_CC_CV_TL</fullName>
            </value>
            <value>
                <fullName>HC_CRM_Escalation_CC_KNVK_TL</fullName>
            </value>
            <value>
                <fullName>HC_CRM_Escalation_CC_LT_TL</fullName>
            </value>
            <value>
                <fullName>HC_CRM_Escalation_HD</fullName>
            </value>
            <value>
                <fullName>HC_CRM_Quality_CC</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_CSREG_Bonus Sociale Energy</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_CSREG_Bonus Sociale Energy_Target</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_CSREG_Canone Rai</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MICO_Miglioramento Continuo</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Accise_Conservice</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Accise_HC</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Appuntamenti_Koinè</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Bonif Anagr da DAFC_HC</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Bonif Anagr da DAFC_Target</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Com Pag_Koinè</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Contratti_Preventivi_HC</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Contratti_Preventivi_Koinè</fullName>
            </value>
            <value>
                <fullName>HC_CVMBO_MMSME_CFBS_Disattivazioni_HC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>