force-app/main/default/objects/Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DailyCapacity__c</columns>
    <columns>Type__c</columns>
    <columns>Agency2__c</columns>
    <columns>WorkGroup__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutte le Code</label>
</ListView>